--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="Hot dogs CRUD" />
+    <meta property="og:description" content="The Power of Minds" />
     <title>Hot dogs CRUD</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
